@@ -1,16 +1,16 @@
 === DarkElements ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 4.3
+Version: 4.4
 Requires at least: 3.7
 Tested up to: 4.5
 License: GNU General Public License v3 or later
 License URI: http://www.gnu.org/licenses/gpl-3.0.html
-Tags: two-columns, left-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, featured-images, post-formats, dark, gray, editor-style, translation-ready
+Tags: two-columns, left-sidebar, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, editor-style, translation-ready
 
 
 == Description ==
-DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
+DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar, sidebar navigation, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
 
 
 == Installation ==
